<resources>
    <string name="app_name">Covfefe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_repeat">Just to make sure you typed it correctly</string>
    <string name="signup">Sign up</string>
    <string name="login">Log In</string>
    <string name="signup_failed">Sign up failed. Did you enter a valid email? Please try again</string>
    <string name="password_no_match">Password does not match</string>
    <string name="allow">Get started</string>
    <string name="email">Email</string>
    <string name="login_failed">Login unsuccessful. Are you sure you have the correct password?</string>
    <string name="facebook_login_failed">Facebook login has failed</string>
    <string name="fill_out_login_info">Please fill out login information</string>
    <string name="display_name">Display name</string>
    <string name="change_display_name">Change display name</string>
    <string name="enter_new_display_name">You must put something as your display name!! Try again</string>
    <string name="display_name_failed_to_change">Display name failed to change</string>
    <string name="login_title">LOG IN YOUR ACCOUNT</string>
    <string name="login_subtitle">Please enter your email address and password</string>
    <string name="login_alternative">Or log in with</string>
    <string name="splash_title">COFFEE TIME</string>
    <string name="create_new_group">CREATE A GROUP</string>
    <string name="create_new_group_subtitle">Type group name in lower case</string>
    <string name="create">CREATE</string>
    <string name="group_name">Group name</string>
    <string name="fill_out_group_name">Group name cannot be empty! Give it a name</string>
    <string name="group_joined">Group joined!</string>
    <string name="group_join_failed">Failed to join group</string>
    <string name="join_group_title">JOIN A GROUP</string>
    <string name="join_group_subtitle">Please enter the group code</string>
    <string name="send">SEND</string>
</resources>
