<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="@dimen/login_btn_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintVertical_chainStyle="packed"
        android:hint="@string/email"
        style="@style/LoginEdit"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="@dimen/login_btn_height"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintBottom_toTopOf="@+id/password_repeat"
        android:hint="@string/password"
        style="@style/LoginEdit"/>

    <EditText
        android:id="@+id/password_repeat"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="@dimen/login_btn_height"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        android:hint="@string/password_repeat"
        style="@style/LoginEdit"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="@dimen/login_btn_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/signup"
        android:background="@drawable/btn_login"
        style="@style/LoginButton"/>

</android.support.constraint.ConstraintLayout>