<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loginComponents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0">
        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginSubtitle"
            android:text="@string/login_title"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHorizontal_bias="1.0"
            style="@style/LoginTitle"
            app:layout_constraintVertical_bias="0.23000002" />
        <TextView
            android:id="@+id/loginSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/username"
            android:layout_marginBottom="30dp"
            android:text="@string/login_subtitle"
            style="@style/LoginSubtitle"/>
        <EditText
            android:id="@+id/username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginSubtitle"
            app:layout_constraintBottom_toTopOf="@+id/password"
            android:hint="@string/email"
            app:layout_constraintVertical_chainStyle="packed"
            style="@style/LoginEdit"/>

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/password"
            style="@style/LoginEdit"/>

        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/login_btn_width"
            android:layout_height="@dimen/login_btn_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintBottom_toTopOf="@+id/facebook_login"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/login"
            android:background="@drawable/btn_login"
            style="@style/LoginButton"
            app:layout_constraintVertical_bias="0.24000001" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:paddingBottom="30dp"/>
        
        <TextView
            android:id="@+id/loginAlternative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup"
            app:layout_constraintBottom_toTopOf="@+id/facebook_login"
            android:text="@string/login_alternative"
            android:paddingBottom="20dp"
            style="@style/LoginTextView"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>